raw/ABIYYU ARHAB NAUFAL 6429 245150201111029/2024-11-14-08-20-35.ceg/compilation.txt
NT.java:3: error: class NT1 is public, should be declared in a file named NT1.java
public class NT1 {
       ^
1 error
Not compiled
